added: a lot of things